# GameOne

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  exec.sh
.github/workflows/: project_safety.yaml
client/: CMakeLists.txt
client/assets/background/: config.toml
client/assets/buttons/: buttonquit.toml  buttonstart.toml
client/assets/enemies/basic/: enemy1.toml  enemy2.toml  enemy3.toml  enemy4.toml  player.toml
client/assets/menu/: menu.toml
client/assets/player/: player.toml
client/assets/player/shoot/: config.toml
client/include/: RtypeClient.hpp
client/src/: RtypeClient.cpp
config/: protocol.json
config/entities/: boundaries.toml  client_player.toml  enemy1.toml  enemy2.toml  enemy3.toml  enemy4.toml  player.toml
documentation/: PROTOCOL.md  RFC67.md  etude_comparative.md  protocol.md
include/: Game.hpp  Protocol.hpp  RtypeClient.hpp  RtypeServer.hpp  temp.hpp  waves.hpp
server/: CMakeLists.txt
server/include/: RtypeServer.hpp
server/src/: RtypeServer.cpp
src/: Game.cpp  RtypeClient.cpp  RtypeServer.cpp  client_main.cpp  server_main.cpp  temp.cpp
tests/unit_tests/: CMakeLists.txt  temp.cpp
